# tradeflow

./: .buildinfo  .gitattributes  .gitignore  CMakeLists.txt  README.md  autocorrelation_calculator.py  codecov.yml  data_analysis.ipynb  data_downloader.py  data_loader.py  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  scripts-requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test-requirements.txt  test.py  time_test.py  tradeflow.common.html  tradeflow.exceptions.html  tradeflow.html  tradeflow.time_series.autoregressive.html  tradeflow.time_series.html  tradeflow.utils.html  utils.cpp  utils.py  utils_dates.py
.doctrees/: environment.pickle  index.doctree  modules.doctree  tradeflow.common.doctree  tradeflow.doctree  tradeflow.exceptions.doctree  tradeflow.time_series.autoregressive.doctree  tradeflow.time_series.doctree  tradeflow.utils.doctree
.github/actions/get-current-package-version/: action.yml
.github/actions/get-package-version/: action.yml
.github/actions/verify-uploaded-content/: action.yml
.github/workflows/: build-distribution-package.yml  build.yml  check-package-installation-and-usage.yml  ci-scripts.yml  ci.yml  documentation.yml  github-release.yml  publish-to-pypi.yml  pypi-verify.yml  python-publish-to-pypi.yml  python-publish-to-test-pypi.yml  python-publish.yml  test-script.yml  verify-uploaded-content-pypi.yml  verify-uploaded-package-content.yml
_modules/: index.html
_modules/tradeflow/: ar_model.html  constants.html  enums.html  exceptions.html  general_utils.html  logger_utils.html  time_series.html
_sources/: index.rst.txt  tradeflow.exceptions.rst.txt  tradeflow.rst.txt  tradeflow.utils.rst.txt
autocorrelation/src/: AutocorrelationCalculator.py  plot_autocorrelation.py
constants/: constants.py
constants/src/: constants.py
datasets/trades_signs/: data.py
doc/: conf.py  index.rst  modules.rst  tradeflow.common.rst  tradeflow.rst  tradeflow.time_series.autoregressive.rst  tradeflow.time_series.rst
examples/: demo_tradeflow.py
exceptions/: custom_exceptions.py
exceptions/src/: custom_exceptions.py
lib/cpp/: simulation.h
lib/cpp/tradeflow/: CMakeLists.txt  simulation.h
metric_results/: metric_results_different_nb_lags.xlsx
modelisation/metrics/: metric_calculator.py
pypi_post_upload_test/: conftest.py  pypi_post_upload_test.py
regression/linear_models/: RegressionModel.py  ols.py
scripts/: check_package_installation_and_usage.py  config.py  file_extensions.py  pypi-verify.py  pypi.py  pypi_verify.py  pypi_verify_uploaded_content.py  utils.py  verify_uploaded_package_content.py
scripts/datasets/: html_page.html  html_page_sample.html  html_page_test_find_urls_in_html_page.html  html_page_test_main_2_sources.html  html_page_test_main_3_wheels.html  html_page_test_main_invalid.html  html_page_test_main_valid.html
scripts/pypi/: pypi-verify.py  utils.py
scripts/tests/: test_check_package_installation_and_usage.py  test_pypi.py  test_pypi_verify.py  test_pypi_verify_uploaded_content.py  test_utils.py  test_verify_uploaded_package_content.py
src/: data_analysis.ipynb  data_downloader.py  data_loader.py  metric_calculator.py  settings.py  signs_simulator.py
src/dates/: __init__.py  daily_date_type.py  date_type.py  monthly_date_type.py
src/utils/: dates_utils.py  general_utils.py  pyspark_utils.py
test_end_to_end/: conftest.py  test_end_to_end.py
test_pypi_post_upload/: test_pypi_post_upload.py
tests/utils/: test_dates_utils.py
time_series/: time_series.py
time_series/autoregressive/: ar_model.py
time_series/src/: ARModel.py  TimeSeriesModel.py  time_series_model.py
time_series/tests/: test_time_series.py
trade_flow_modelling/src/: bis.py  data_analysis.ipynb  ols.py  settings.py
tradeflow/: __init__.py  ar_model.py  cmult.cpp  config.py  constants.py  ctypes_utils.py  definitions.py  exceptions.py  simulate.cpp  time_series.py
tradeflow/common/: config.py  ctypes_utils.py  exceptions.py  shared_libraries_functions.py  shared_libraries_registry.py  singleton.py
tradeflow/tests/: test_ar_model.py  test_cpp.py  test_ctypes_utils.py  test_enums.py  test_time_series.py
tradeflow/time_series/: time_series.py
tradeflow/utils/: general_utils.py  logger_utils.py
utils/: general_utils.py  logger_utils.py
utils/src/: general_utils.py  logger_utils.py
utils/tests/: test_general_utils.py
validation/: validation.py  validation_test.py
(+99 files in other folders)
